--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -82,7 +82,8 @@
     <string name="continue_with_social">Continue with %s</string>
     <!-- Message shown while user waits for response to a sign in request-->
     <string name="signing_in">Signing in</string>
-
     <!-- Title of Discover screen -->
     <string name="label_explore_the_catalog">Explore the catalog</string>
+    <!-- Message shown while some course content is locked -->
+    <string name="locked_content_message_in_drop_down">Some content in this part of the course is locked for upgraded users only.</string>
 </resources>
