--- a/OpenEdXMobile/res/values/text_styles.xml
+++ b/OpenEdXMobile/res/values/text_styles.xml
@@ -286,4 +286,20 @@
         <item name="android:textSize">@dimen/edx_x_small</item>
         <item name="lineHeight">@dimen/edx_default_margin</item>
     </style>
+
+    <style name="CourseUnitDropDownItem">
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textColor">@color/neutralXXDark</item>
+        <item name="android:textSize">@dimen/edx_x_small</item>
+        <item name="lineHeight">@dimen/widget_margin_double</item>
+        <item name="fontFamily">?attr/fontRegular</item>
+    </style>
+
+    <style name="CourseUnitDropDownItemLocked">
+        <item name="android:textColor">@color/neutralXDark</item>
+        <item name="android:textSize">@dimen/edx_xx_small</item>
+        <item name="lineHeight">@dimen/edx_margin</item>
+        <item name="fontFamily">?attr/fontRegular</item>
+    </style>
 </resources>
