--- a/OpenEdXMobile/res/layout/layout_units_drop_down.xml
+++ b/OpenEdXMobile/res/layout/layout_units_drop_down.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rv_units"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+    app:cardCornerRadius="@dimen/edx_box_radius">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_units"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+</androidx.cardview.widget.CardView>
