refactor: Replace listView with recyclerView for Discussion Screen
- Replace listView with recyclerView on CourseDiscussionTopicsFragment, CourseDiscussionPostsThreadFragment and CourseDiscussionPostsSearchFragment
- Update BaseListAdapters with RecyclerView Adapters
- Optimise Code and usage including Java to kotlin conversion
- Add Extensions methods for multiple Views

fix: LEARNER-9578

--- a/OpenEdXMobile/res/layout/row_discussion_topic.xml
+++ b/OpenEdXMobile/res/layout/row_discussion_topic.xml
@@ -12,4 +12,5 @@
     android:singleLine="true"
     android:textDirection="locale"
     android:textSize="@dimen/edx_base"
+    android:background="@drawable/view_selector"
     tools:text="Topic Name" />
