--- a/OpenEdXMobile/res/layout/fragment_discussion_search_posts.xml
+++ b/OpenEdXMobile/res/layout/fragment_discussion_search_posts.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         android:visibility="invisible"
+        tools:itemCount="4"
         tools:listitem="@layout/row_discussion_thread"
         tools:visibility="visible" />
 </LinearLayout>
