--- a/OpenEdXMobile/res/layout/fragment_discussion_topics.xml
+++ b/OpenEdXMobile/res/layout/fragment_discussion_topics.xml
@@ -37,5 +37,5 @@
 
     <include
         layout="@layout/content_error"
-        android:visibility="gone" />
+        tools:visibility="gone" />
 </FrameLayout>
