feat: Enhance Course Navigation Buttons (Next & Previous)
Fixes: LEARNER-9613

--- a/OpenEdXMobile/res/values/attrs.xml
+++ b/OpenEdXMobile/res/values/attrs.xml
@@ -41,5 +41,7 @@
     <!-- font-weight: 700 -->
     <attr name="fontBold" format="reference" />
     <!-- font-weight: 400 -->
-    <attr name="secondaryFontRegular" format="reference" />
+    <attr name="fontSecondaryRegular" format="reference" />
+    <!-- font-weight: 500 -->
+    <attr name="fontSecondaryMedium" format="reference" />
 </resources>
