--- a/OpenEdXMobile/res/values/styles.xml
+++ b/OpenEdXMobile/res/values/styles.xml
@@ -34,7 +34,8 @@
         <item name="fontSemiBoldItalic">@font/inter_semi_bold_italic</item>
         <item name="fontSemiBold">@font/inter_semi_bold</item>
         <item name="fontBold">@font/inter_bold</item>
-        <item name="secondaryFontRegular">@font/roboto_mono_regular</item>
+        <item name="fontSecondaryRegular">@font/roboto_mono_regular</item>
+        <item name="fontSecondaryMedium">@font/roboto_mono_medium</item>
         <item name="android:fontFamily">?attr/fontRegular</item>
     </style>
 
