fix: Retain sections visibility on refresh
Fixes: LEARNER-9613

--- a/OpenEdXMobile/res/layout/activity_course_unit_navigation.xml
+++ b/OpenEdXMobile/res/layout/activity_course_unit_navigation.xml
@@ -181,8 +181,7 @@
             android:id="@+id/goto_next"
             style="@style/course_navigation_button"
             android:layout_alignParentEnd="true"
-            android:text="@string/assessment_next"
-            tools:ignore="RelativeOverlap" />
+            android:text="@string/assessment_next" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
