--- a/OpenEdXMobile/res/drawable/view_selector.xml
+++ b/OpenEdXMobile/res/drawable/view_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/neutralDark" android:state_pressed="true" />
+    <item android:drawable="@color/neutralXLight" android:state_pressed="true" />
     <item android:drawable="@color/neutralXLight" android:state_selected="true" />
     <item android:drawable="@drawable/focus_disabled_drawable" android:state_enabled="false" android:state_focused="true" />
     <item android:drawable="@color/neutralXLight" android:state_enabled="false" />
