--- a/OpenEdXMobile/res/layout/sub_section_row_layout.xml
+++ b/OpenEdXMobile/res/layout/sub_section_row_layout.xml
@@ -15,6 +15,7 @@
         android:id="@+id/sub_section_row_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/view_selector"
         android:paddingStart="@dimen/edx_default_margin"
         android:paddingTop="@dimen/container_padding"
         android:paddingEnd="@dimen/edx_half_margin"
