fix: University name visibility on expended toolbar on CourseDashboard
fixes: LEARNER-9625

--- a/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
+++ b/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
@@ -99,7 +99,7 @@
                 android:id="@+id/collapsed_toolbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/collapsed_toolbar_height"
-                android:background="@color/primaryLightColor"
+                android:background="@color/transparent"
                 app:layout_collapseMode="pin">
 
                 <LinearLayout
