--- a/OpenEdXMobile/res/layout/fragment_course_tabs_dashboard.xml
+++ b/OpenEdXMobile/res/layout/fragment_course_tabs_dashboard.xml
@@ -33,6 +33,11 @@
             android:id="@+id/loading_error"
             layout="@layout/layout_error_state"
             android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/flying_message"
+            style="@style/flying_message"
+            android:visibility="gone" />
     </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
