--- a/OpenEdXMobile/res/values-de-rDE/errors.xml
+++ b/OpenEdXMobile/res/values-de-rDE/errors.xml
@@ -51,7 +51,7 @@
   <string name="error_account_not_linked_desc_microsoft_2">Dieses Microsoft Konto wurde nicht mit {platform_name} verknüpft.  Bitte registieren. </string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
-  <string name="app_version_unsupported">Ihre Version der App wird nicht weiter unterstützt</string>
+  <string name="app_version_unsupported">Ihre Version der App wird nicht weiter unterstützt.</string>
   <!--Snackbar notification shown when the current version of the app is deprecated-->
   <!--Snackbar notification shown when the current version of the app is outdated-->
   <string name="app_version_outdated">Es ist eine neue Version der App verfügbar.</string>
