--- a/OpenEdXMobile/res/values-es/errors.xml
+++ b/OpenEdXMobile/res/values-es/errors.xml
@@ -51,7 +51,7 @@
   <string name="error_account_not_linked_desc_microsoft_2">Esta cuenta de Microsoft no esta vinculada a ninguna cuenta de {platform_name}. Por favor regístrela.</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
-  <string name="app_version_unsupported">Su versión de la app ya no está soportada</string>
+  <string name="app_version_unsupported">Su versión de la app ya no está soportada.</string>
   <!--Snackbar notification shown when the current version of the app is deprecated-->
   <!--Snackbar notification shown when the current version of the app is outdated-->
   <string name="app_version_outdated">Una versión nueva de la app está disponible.</string>
