--- a/OpenEdXMobile/res/values-iw/errors.xml
+++ b/OpenEdXMobile/res/values-iw/errors.xml
@@ -51,7 +51,7 @@
   <string name="error_account_not_linked_desc_microsoft_2">חשבון Microsoft זה אינו מקושר עם שום חשבון {platform_name}. אנא הירשמו.</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
-  <string name="app_version_unsupported">גרסת האפליקציה שברשותכם אינה נתמכת עוד</string>
+  <string name="app_version_unsupported">גרסת האפליקציה שברשותכם אינה נתמכת עוד.</string>
   <!--Snackbar notification shown when the current version of the app is deprecated-->
   <!--Snackbar notification shown when the current version of the app is outdated-->
   <string name="app_version_outdated">גרסה חדשה של האפליקציה זמינה להורדה.</string>
