--- a/OpenEdXMobile/res/values-pt-rBR/errors.xml
+++ b/OpenEdXMobile/res/values-pt-rBR/errors.xml
@@ -51,7 +51,7 @@
   <string name="error_account_not_linked_desc_microsoft_2">Esta conta Microsoft não está conectada com nenhuma conta {platform_name}. Por favor registre-se.</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
-  <string name="app_version_unsupported">Esta versão do app não é mais compatível</string>
+  <string name="app_version_unsupported">Esta versão do app não é mais compatível.</string>
   <!--Snackbar notification shown when the current version of the app is deprecated-->
   <!--Snackbar notification shown when the current version of the app is outdated-->
   <string name="app_version_outdated">Uma nova versão do app está disponível.</string>
