--- a/OpenEdXMobile/res/values-tr/errors.xml
+++ b/OpenEdXMobile/res/values-tr/errors.xml
@@ -51,7 +51,7 @@
   <string name="error_account_not_linked_desc_microsoft_2">Bu Microsoft hesabı herhangi bir {platform_name} hesabıyla bağlantılı değil. Lütfen kaydolun.</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
-  <string name="app_version_unsupported">Uygulamanızın sürümü artık desteklenmiyor</string>
+  <string name="app_version_unsupported">Uygulamanızın sürümü artık desteklenmiyor.</string>
   <!--Snackbar notification shown when the current version of the app is deprecated-->
   <!--Snackbar notification shown when the current version of the app is outdated-->
   <string name="app_version_outdated">Uygulamanın yeni bir sürümü mevcut.</string>
