--- a/OpenEdXMobile/res/values-vi/errors.xml
+++ b/OpenEdXMobile/res/values-vi/errors.xml
@@ -51,7 +51,7 @@
   <string name="error_account_not_linked_desc_microsoft_2">Tài khoản Microsoft này không được liên kết với bất kỳ tài khoản {platform_name} nào. Vui lòng đăng ký.</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
-  <string name="app_version_unsupported">Phiên bản hiện tại của ứng dụng không còn được hỗ trợ</string>
+  <string name="app_version_unsupported">Phiên bản hiện tại của ứng dụng không còn được hỗ trợ.</string>
   <!--Snackbar notification shown when the current version of the app is deprecated-->
   <!--Snackbar notification shown when the current version of the app is outdated-->
   <string name="app_version_outdated">Ứng dụng đã có phiên bản mới hơn.</string>
